<resources>
    <string name="_subsonic_error_code_10">Required parameter is missing.</string>
    <string name="_subsonic_error_code_20">Incompatible Subsonic REST protocol version. Client must upgrade.</string>
    <string name="_subsonic_error_code_30">Incompatible Subsonic REST protocol version. Server must upgrade.</string>
    <string name="_subsonic_error_code_40">"Wrong username or password.</string>
    <string name="_subsonic_error_code_41">"Token authentication not supported for LDAP users.</string>
    <string name="_subsonic_error_code_50">"User is not authorized for the given operation.</string>
    <string name="_subsonic_error_code_60">"The trial period for the Subsonic server is over. Please upgrade to Subsonic Premium. Visit subsonic.org for details.</string>
    <string name="_subsonic_error_code_70">"The requested data was not found.</string>
    <string name="_subsonic_error_code_0">A generic error.</string>

    <string name="app_name">Debutante</string>
    <string name="mi_settings">Settings</string>
    <string name="welcome_message">Welcome to Debutante, please configure your subsonic account</string>
    <string name="create_button">Let\'s do it</string>
    <string name="account_url">URL</string>
    <string name="et_url_hint">https://www.domain.com(:443/path)</string>
    <string name="account_username">Username</string>
    <string name="account_password">Password</string>
    <string name="account_test_connection">Test connection</string>
    <string name="account_save">Save</string>
    <string name="test_connectivity_success">Connection successful</string>
    <string name="test_connectivity_failure">Connection failure</string>
    <string name="save_account_success">Account saved</string>
    <string name="save_account_failure">Can\'t save account</string>
    <string name="tv_error_required_field">Field is mandatory</string>
    <string name="tv_error_invalid_url">This does not seem a valid URL</string>
    <string name="account_alias">Alias</string>
    <string name="load_entites_failure">Can\'t load data</string>
    <string name="fetch_artitsts_failure">Can\'t fetch artists from server</string>
    <string name="fetch_albums_failure">Can\'t fetch albums from server</string>
    <string name="cant_sync_while_playing">Can\'t synchronize while player is playing </string>
    <string name="mi_play">Play</string>
    <string name="mi_cast">Cast</string>
    <string name="play_previous">Resume last session</string>
    <string name="play_all">Play all</string>
    <string name="fetch_success">Account has been synchronized</string>
    <string name="fetch_aborted">Synchronization has been aborted</string>
    <string name="fetch_start_account">Synchronizing account %s</string>
    <string name="fetch_start_artist">Synchronizing %1$s for account %2$s</string>
    <string name="p_caches">Caches</string>

    <string name="p_song_cache">Songs cache (MB)</string>
    <string name="p_cover_art_cache">Artists and albums covers cache (MB)</string>
    <string name="p_accounts">Accounts</string>
    <string name="p_accounts_sync_interval">Synchronization interval (Hours)</string>
    <string name="p_accounts_sync_enabled">Synchronize accounts</string>
    <string name="p_song_preload">Songs to preload</string>
    <string name="p_song_preload_wifi">Preload songs on WiFi only</string>
    <string name="p_streaming">Streaming</string>
    <string name="p_format">Desired format</string>
    <string name="p_bitrate">Desired bitrate</string>
    <string name="format_default">server</string>
    <string name="bitrate_default">server</string>
    <string name="p_accounts_local_enabled">Device media files</string>
    <string name="give_up_button">Nope, just local media</string>
    <string name="local_access_granted">Great, you can now listen to music from your own device</string>
    <string name="tv_error_duplicated_alias">Alias already exists</string>
    <string name="player_service_notification_content">Debutante service for background playing is running…</string>
    <string name="media_service_notification_content">Debutante media browser service running…</string>
    <string name="init_service_notification_content">Debutante initialization service is running…</string>
    <string name="httpd_service_notification_content">Debutante HTTP service for casting local storage media files is running…</string>
    <string name="sync_service_notification_content">Debutante is syncing remote accounts…</string>
    <string name="player_service_stop">Stop service</string>
    <string name="player_service_open_player">Open player</string>
    <string name="p_ux">User experience</string>
    <string name="p_artist_pic_enabled">Display artist picture</string>
    <string name="mi_playlist">Playlist</string>
    <string name="p_playlists_enabled">Playlists as artist</string>
    <string name="p_info">Info</string>
    <string name="p_info_licenses">OSS licenses</string>
    <string name="p_autoplay_on_bt_enabled">Autoplay on Bluetooth connection</string>
    <string name="p_accounts_local_enabled_summary">Create special \"Local\" account to browse for local media files</string>
    <string name="p_playlists_enabled_summary">Create special \"Playlists\" artist to browse for playlists</string>
    <string name="p_artist_pic_enabled_summary">Display artist\'s pictures instead of a simple list; Subsonic server must be able to fetch them</string>
    <string name="p_autoplay_on_bt_enabled_summary">Start the player if a Bluetooth A2DP device, typically a pair of headphones, is connected</string>
    <string name="p_song_preload_wifi_summary">If enabled songs will not be preloaded (cached) on mobile data connection</string>
    <string name="p_accounts_sync_enabled_summary">Periodically refresh library metadata for each Subsonic account</string>
    <string name="p_info_licenses_summary">Consult licenses of OSS libraries used by Debutante</string>
    <string name="p_experimental">Experimental</string>
    <string name="p_art_on_bt_enabled">Send song/album cover over Bluetooth</string>
    <string name="p_art_on_bt_enabled_summary">If both your device and remote client supports AVRCP 1.6 then Debutante can push cached song/album cover over Bluetooth</string>
    <string name="p_streaming_timeout">Timeout (seconds)</string>
    <string name="p_car_text_icons_enabled">Items with text icons on car/Bluetooth</string>
    <string name="p_car_text_icons_enabled_summary">Use UTF-8 icons instead of graphic ones when browsing from car/Bluetooth</string>
    <string name="p_clear_caches">Clear cached songs</string>
    <string name="clear_caches_confirmation">Are you sure you want to clear songs cache?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="p_cast_local_enabled">Cast local media</string>
    <string name="p_cast_local_enabled_summary">Start a lightweight local HTTP server, when casting, for local media streaming. <b>IMPORTANT:</b> local service can\'t be HTTPS as we can\'t generate trusted certificates but Debutante won\'t expose any sensitive information in casting URLs</string>
    <string name="p_autoplay_bt_exclusion">Autoplay on Bluetooth exclusions</string>
    <string name="p_autoplay_bt_exclusion_summary">List of Bluetooth devices that won\'t start the player on connection</string>
    <string name="exo_controls_time_separator">·</string>
    <string name="p_offload_enabled">Offload audio</string>
    <string name="p_offload_enabled_summary">Debutante can leverage ExoPlayer offload mode to reduce battery usage when in background</string>
    <string name="p_handle_noisy_audio_enabled">Pause on audio becoming noisy</string>
    <string name="p_handle_noisy_audio_enabled_summary">Sets whether the player should pause automatically when audio is rerouted from a headset to device speakers; disabling might help with flaky Bluetooth connections that cause undesired player pauses</string>
    <string name="require_post_notification">Please allow %s to send you notifications or it won\'t be able to play music in the background.</string>
    <string name="name_year_pattern">%s (%d)</string>
    <string name="name_duration_pattern">%s (%s)</string>
</resources>
